[package]
name = "yew_todo_lib_one"
version = "0.1.0"
authors = ["John <johnwalton@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.8.0"
serde_derive = "1.0.99"
strum = "0.15.0"
strum_macros = "0.15.0"
